Addon rewrite from Python/React to Express/React w/Bun

--- a/addon/Dockerfile
+++ b/addon/Dockerfile
@@ -1,19 +1,18 @@
 ARG BUILD_FROM
 FROM ${BUILD_FROM}
 
-ARG PYTHON_VENV_PATH=/opt/venv
+ENV BUN_INSTALL="/opt/bun"
+ENV PATH="${BUN_INSTALL}/bin:${PATH}"
 
-ENV \
-  PYTHONUNBUFFERED=1 \
-  PATH="${PYTHON_VENV_PATH}/bin:${PATH}"
-
-RUN apk add --no-cache python3 py3-pip \
-  && python3 -m venv ${PYTHON_VENV_PATH} \
-  && ${PYTHON_VENV_PATH}/bin/pip install --no-cache-dir --upgrade pip
+RUN apk add --no-cache bash curl ca-certificates \
+  && curl -fsSL https://bun.sh/install | bash \
+  && ln -s ${BUN_INSTALL}/bin/bun /usr/local/bin/bun \
+  && rm -rf /root/.bun/cache /var/cache/apk/*
 
 COPY rootfs /
 
 RUN chmod +x /etc/services.d/luftujha/run
 
 WORKDIR /usr/src/app
-RUN pip install --no-cache-dir -r requirements.txt
+
+RUN bun install
