--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "build:addon": "npm run build && node scripts/sync-dist.mjs",
+    "build:addon": "bun run build && bun scripts/sync-dist.mjs",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.7",
-    "@mui/material": "^6.1.7",
+    "@mantine/core": "^7.13.2",
+    "@mantine/hooks": "^7.13.2",
+    "@mantine/notifications": "^7.13.2",
+    "@tabler/icons-react": "^3.22.0",
+    "@tanstack/react-router": "^1.79.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
