--- a/package.json
+++ b/package.json
@@ -11,26 +11,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^7.13.2",
-    "@mantine/hooks": "^7.13.2",
-    "@mantine/notifications": "^7.13.2",
-    "@tabler/icons-react": "^3.22.0",
-    "@tanstack/react-router": "^1.79.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "@mantine/core": "^7.17.8",
+    "@mantine/hooks": "^7.17.8",
+    "@mantine/notifications": "^7.17.8",
+    "@tabler/icons-react": "^3.35.0",
+    "@tanstack/react-router": "^1.133.36",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^7.2.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-i18next": "^15.7.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "eslint": "^9.36.0",
+    "@eslint/js": "^9.38.0",
+    "@types/node": "^24.9.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.0",
+    "eslint": "^9.38.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.45.0",
+    "typescript-eslint": "^8.46.2",
     "vite": "7.1.12"
   }
 }
