--- a/package.json
+++ b/package.json
@@ -17,26 +17,29 @@
     "@mantine/hooks": "^7.17.8",
     "@mantine/notifications": "^7.17.8",
     "@tabler/icons-react": "^3.35.0",
-    "@tanstack/react-router": "^1.133.36",
+    "@tanstack/react-router": "^1.140.0",
+    "@types/react-big-calendar": "^1.16.3",
+    "date-fns": "^3.6.0",
     "i18next": "^23.16.8",
     "i18next-browser-languagedetector": "^7.2.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.1",
+    "react-big-calendar": "^1.19.4",
+    "react-dom": "^19.2.1",
     "react-i18next": "^15.7.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "@types/node": "^24.9.2",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.1.0",
-    "eslint": "^9.38.0",
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.4.0",
-    "prettier": "^3.3.3",
+    "globals": "^16.5.0",
+    "prettier": "^3.7.4",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.2",
+    "typescript-eslint": "^8.48.1",
     "vite": "7.1.12"
   }
 }
