--- a/addon/Dockerfile
+++ b/addon/Dockerfile
@@ -4,7 +4,7 @@ FROM ${BUILD_FROM}
 ENV BUN_INSTALL="/opt/bun"
 ENV PATH="${BUN_INSTALL}/bin:${PATH}"
 
-RUN apk add --no-cache bash curl ca-certificates \
+RUN apk add --no-cache bash curl ca-certificates libc6-compat gcompat \
   && curl -fsSL https://bun.sh/install | bash \
   && ln -s ${BUN_INSTALL}/bin/bun /usr/local/bin/bun \
   && rm -rf /root/.bun/cache /var/cache/apk/*
