MQTT client for publishing values into HA

--- a/addon/rootfs/usr/src/app/package.json
+++ b/addon/rootfs/usr/src/app/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "modbus-serial": "^8.0.23",
+    "mqtt": "^5.14.1",
     "pino": "^10.2.0",
     "ws": "^8.19.0",
     "zod": "^4.3.5"
