--- a/addon/config.yaml
+++ b/addon/config.yaml
@@ -28,8 +28,16 @@ ports_description:
 options:
   log_level: info
   web_port: 8099
+  mqtt_host: ""
+  mqtt_port: 1883
+  mqtt_user: ""
+  mqtt_password: ""
 schema:
   log_level: list(trace|debug|info|notice|warning|error|fatal)
   web_port: int(1024,65535)
+  mqtt_host: str?
+  mqtt_port: int(1,65535)
+  mqtt_user: str?
+  mqtt_password: str?
 # TODO: Přidat až bude image existovat
 #image: "ghcr.io/kankajm/{arch}-addon-luftujha"
